--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Bobohkon",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "moment": "^2.30.1"
   },
   "devDependencies": {
